log
Sat Apr  9 18:15:19 UTC 2022: 
 hashmap.c | 98 ++++++++++++++++++++++++++++++++++++++++++++++++++++++---------
 1 file changed, 85 insertions(+), 13 deletions(-)
 tests:  0|0
92e06cb
Sat Apr  9 18:22:54 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
7f3b28e
Sat Apr  9 18:28:39 UTC 2022: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘eraseMap’:
hashmap.c:95:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   if(searchMap(map,key));
   ^~
hashmap.c:96:3: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   {
   ^
cc1: all warnings being treated as errors
Compilation failed
6bcabd9
Sat Apr  9 18:28:52 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e50522d
Sat Apr  9 18:30:50 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ce466b5
Sat Apr  9 18:32:46 UTC 2022: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  0|0
da96338
Sat Apr  9 18:33:52 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9e9e682
Sat Apr  9 18:35:03 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘firstMap’:
hashmap.c:137:5: error: ‘mmap’ undeclared (first use in this function); did you mean ‘map’?
     mmap->current += 1;
     ^~~~
     map
hashmap.c:137:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e8a0a4f
Sat Apr  9 18:35:12 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4ee67c4
Sat Apr  9 18:35:25 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c29b6d2
Sat Apr  9 18:40:15 UTC 2022: 
 hashmap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|0
2d3cd2f
Sat Apr  9 18:41:01 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5bc128a
Sat Apr  9 18:42:04 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f3f5290
Sat Apr  9 18:42:16 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8f491e3
Sat Apr  9 18:42:59 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5f83a7a
Sat Apr  9 18:43:24 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7bd926a
Sat Apr  9 18:45:05 UTC 2022: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
5a4e986
Sat Apr  9 18:45:23 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
0a72583
Sat Apr  9 18:45:59 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8508f45
Sat Apr  9 18:50:33 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b7a5952
Sat Apr  9 18:51:54 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c970827
